--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="./index.css "/>
+    <link rel="stylesheets" href="/index.css">
     <title>react</title>
     
 </head>
@@ -12,10 +12,10 @@
     <div id="root">
         <h1>subbu is here</h1>
     </div>
-    <script crossorigin 
-    src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin 
-    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="app.js"> </script> 
+ 
+    <script type="module" src="app.js">
+
+    </script> 
+
 </body>
 </html>
